--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: dancernl4@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A technology blog with a math twist!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://natalielane.net" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  nlane
 
