--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Natalie's Little Theorems
 email: dancernl4@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A technology blog with a math twist!
+  A tech blog with a math twist!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://natalielane.net" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
