--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: "http://natalielane.net" # the base hostname & protocol for your site, e.g.
 twitter_username:
 github_username:  nlane
 linkedin_username:  natalie-lane-893170a0
-
+future: true
 # Build settings
 markdown: kramdown
 theme: minima
